got small grid aligned correctly

--- a/Content/stlye.css
+++ b/Content/stlye.css
@@ -55,7 +55,7 @@ h3 {
 .theSketch {
     background-color: white;
     height: 35rem;
-    width: 55rem;
+    width: 55.5rem;
     margin: auto;
     display: flex;
     flex-wrap: wrap;
